get thumbnail from youtube for contents
